--- a/browser.html
+++ b/browser.html
@@ -9,22 +9,25 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #1e1e1e;
-            color: white;
+            background-color: #ffffff; /* Set default light background */
+            color: black; /* Text color for light theme */
+            transition: background-color 0.3s, color 0.3s; /* Smooth transitions for theme switching */
         }
         #controls {
             display: flex;
             justify-content: space-between;
             padding: 10px;
-            background: white; /* Set the controls to light background */
+            background: white; /* Light background by default */
+            transition: background-color 0.3s; /* Smooth transition for controls */
         }
         button {
             background: none;
             border: none;
-            color: black; /* Change button text color for contrast */
+            color: black; /* Button text color for light theme */
             cursor: pointer;
             font-size: 16px;
             padding: 10px;
+            transition: color 0.3s; /* Smooth transition for button text color */
         }
         button:hover {
             background: #444;
@@ -37,11 +40,13 @@
             border: 1px solid #ccc; /* Light border color for input */
             background: #f0f0f0; /* Light background for input */
             color: black; /* Dark text for input */
+            transition: background 0.3s, color 0.3s; /* Smooth transition for input */
         }
         iframe {
             width: 100%;
             height: calc(100vh - 50px);
             border: none;
+            background-color: white; /* Set iframe default background color */
         }
         #settings {
             position: absolute;
@@ -100,6 +105,7 @@
         const urlInput = document.getElementById('urlInput').value.trim();
         let url = urlInput;
 
+        // Add http/https if missing
         if (!url.startsWith('http://') && !url.startsWith('https://')) {
             url = 'http://' + url; // Add default protocol if not provided
         }
@@ -135,7 +141,8 @@
         const adBlockerToggle = document.getElementById('adBlockerToggle');
         const message = adBlockerToggle.checked ? "Ad Blocker Enabled" : "Ad Blocker Disabled";
         alert(message);
-        
+
+        // Mock ad-blocking behavior
         const iframe = document.getElementById('browser');
         const currentUrl = new URL(iframe.src);
         if (adBlockerToggle.checked && adBlockedSites.includes(currentUrl.hostname)) {
@@ -145,27 +152,34 @@
     }
 
     function toggleTheme() {
-        document.body.classList.toggle('dark-theme');
-        document.getElementById('controls').classList.toggle('dark-theme');
-        const inputs = document.getElementById('urlInput');
-        
-        if (document.body.classList.contains('dark-theme')) {
-            // Set dark theme styles
-            document.body.style.backgroundColor = '#1e1e1e';
-            document.body.style.color = 'white';
-            document.getElementById('controls').style.background = '#222';
-            inputs.style.background = '#3a3a3a'; 
-            inputs.style.color = 'white'; 
-            inputs.style.border = '1px solid #555';
+        const isDarkTheme = document.body.classList.toggle('dark-theme');
+        const controls = document.getElementById('controls');
+
+        // Toggle theme styles
+        if (isDarkTheme) {
+            document.body.style.backgroundColor = '#1e1e1e'; // Dark background
+            document.body.style.color = 'white'; // Light text
+            controls.style.backgroundColor = '#333'; // Dark control background
+            document.getElementById('urlInput').style.background = '#3a3a3a'; // Dark input background
+            document.getElementById('urlInput').style.color = 'white'; // Light input text
+            document.getElementById('urlInput').style.border = '1px solid #555'; // Dark input border
+            document.querySelectorAll('button').forEach(btn => {
+                btn.style.color = 'white'; // Light button text
+            });
         } else {
-            // Reset to light theme styles
-            document.body.style.backgroundColor = 'white';
-            document.body.style.color = 'black';
-            document.getElementById('controls').style.background = 'white';
-            inputs.style.background = '#f0f0f0'; 
-            inputs.style.color = 'black'; 
-            inputs.style.border = '1px solid #ccc';
+            document.body.style.backgroundColor = '#ffffff'; // Light background
+            document.body.style.color = 'black'; // Dark text
+            controls.style.backgroundColor = 'white'; // Light control background
+            document.getElementById('urlInput').style.background = '#f0f0f0'; // Light input background
+            document.getElementById('urlInput').style.color = 'black'; // Dark input text
+            document.getElementById('urlInput').style.border = '1px solid #ccc'; // Light input border
+            document.querySelectorAll('button').forEach(btn => {
+                btn.style.color = 'black'; // Dark button text
+            });
         }
+
+        const iframe = document.getElementById('browser');
+        iframe.style.backgroundColor = isDarkTheme ? '#1e1e1e' : 'white'; // Set iframe background based on theme
     }
 
     // Close settings menu if clicking outside of it
