--- a/browser.html
+++ b/browser.html
@@ -3,194 +3,129 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Web Browser</title>
+    <title>Simple Opera GX-like Browser</title>
     <style>
+        * {
+            box-sizing: border-box;
+        }
         body {
-            font-family: Arial, sans-serif;
+            font-family: 'Arial', sans-serif;
             margin: 0;
-            padding: 0;
-            background-color: #ffffff; /* Set default light background */
-            color: black; /* Text color for light theme */
-            transition: background-color 0.3s, color 0.3s; /* Smooth transitions for theme switching */
+            background-color: #0f0f0f;
+            color: #ffffff;
+            display: flex;
+        }
+        #sidebar {
+            width: 250px;
+            background-color: #1f1f1f;
+            padding: 20px;
+            display: flex;
+            flex-direction: column;
+            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
+        }
+        #sidebar h2 {
+            text-align: center;
+            color: #ff5f5f;
+        }
+        #sidebar a {
+            color: #fff;
+            text-decoration: none;
+            padding: 10px;
+            margin: 5px 0;
+            border-radius: 5px;
+            transition: background 0.3s;
+        }
+        #sidebar a:hover {
+            background-color: #ff5f5f;
+        }
+        #main {
+            flex-grow: 1;
+            display: flex;
+            flex-direction: column;
         }
         #controls {
             display: flex;
-            justify-content: space-between;
             padding: 10px;
-            background: white; /* Light background by default */
-            transition: background-color 0.3s; /* Smooth transition for controls */
+            background-color: #272727;
+            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
         }
         button {
-            background: none;
+            background: #ff5f5f;
             border: none;
-            color: black; /* Button text color for light theme */
-            cursor: pointer;
-            font-size: 16px;
+            color: white;
             padding: 10px;
-            transition: color 0.3s; /* Smooth transition for button text color */
+            margin-right: 5px;
+            cursor: pointer;
+            border-radius: 5px;
+            transition: background 0.3s;
         }
         button:hover {
-            background: #444;
-            color: white; /* Change color on hover */
+            background: #ff8080;
         }
         #urlInput {
             flex-grow: 1;
-            margin: 0 10px;
             padding: 10px;
-            border: 1px solid #ccc; /* Light border color for input */
-            background: #f0f0f0; /* Light background for input */
-            color: black; /* Dark text for input */
-            transition: background 0.3s, color 0.3s; /* Smooth transition for input */
+            background-color: #3c3c3c;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            margin-left: 5px;
         }
         iframe {
             width: 100%;
-            height: calc(100vh - 50px);
+            height: calc(100vh - 60px); /* Adjust height based on the controls */
             border: none;
-            background-color: white; /* Set iframe default background color */
-        }
-        #settings {
-            position: absolute;
-            top: 10px;
-            right: 10px;
-            cursor: pointer;
-            transition: transform 0.3s;
-        }
-        #settings:hover {
-            transform: rotate(90deg);
-        }
-        #settingsMenu {
-            position: absolute;
-            top: 40px;
-            right: 10px;
-            background: #333;
-            border: 1px solid #444;
-            display: none;
-            padding: 10px;
-            z-index: 1;
-        }
-        #settingsMenu label {
-            display: block;
-            color: white;
         }
     </style>
 </head>
 <body>
 
-<div id="controls">
-    <button onclick="goBack()">&#9664; Back</button>
-    <button onclick="goForward()">Forward &#9654;</button>
-    <button onclick="reload()">Reload</button>
-    <input type="text" id="urlInput" placeholder="Enter URL (e.g., example.com)" />
-    <button onclick="navigate()">Go</button>
-    <div id="settings">⚙️</div>
+<div id="sidebar">
+    <h2>My Browser</h2>
+    <a href="#">Home</a>
+    <a href="#">Bookmarks</a>
+    <a href="#">Settings</a>
+    <a href="#">Extensions</a>
+    <a href="#">Themes</a>
 </div>
 
-<div id="settingsMenu">
-    <label>
-        <input type="checkbox" id="adBlockerToggle" onchange="toggleAdBlocker()">
-        Enable Ad Blocker
-    </label>
-    <label>
-        <input type="checkbox" id="themeToggle" onchange="toggleTheme()">
-        Toggle Dark Theme
-    </label>
+<div id="main">
+    <div id="controls">
+        <button onclick="goBack()">&#9664; Back</button>
+        <button onclick="goForward()">Forward &#9654;</button>
+        <button onclick="reload()">Reload</button>
+        <input type="text" id="urlInput" placeholder="Enter URL (e.g., https://example.com)" />
+        <button onclick="navigate()">Go</button>
+    </div>
+    <iframe id="browser" src="https://www.google.com"></iframe>
 </div>
-
-<iframe id="browser" src="https://www.google.com"></iframe>
 
 <script>
-    const adBlockedSites = ["example.com"]; // List of sites to block for demo purposes
-
     function navigate() {
         const urlInput = document.getElementById('urlInput').value.trim();
         let url = urlInput;
 
-        // Add http/https if missing
         if (!url.startsWith('http://') && !url.startsWith('https://')) {
-            url = 'http://' + url; // Add default protocol if not provided
+            url = 'http://' + url;
         }
 
-        try {
-            document.getElementById('browser').src = url;
-        } catch (error) {
-            alert('Invalid URL. Please try again.'); // Show alert for invalid URLs
-        }
+        document.getElementById('browser').src = url; // Load the entered URL
     }
 
     function goBack() {
         const iframe = document.getElementById('browser');
-        iframe.contentWindow.history.back();
+        iframe.contentWindow.history.back(); // Go back in navigation history
     }
 
     function goForward() {
         const iframe = document.getElementById('browser');
-        iframe.contentWindow.history.forward();
+        iframe.contentWindow.history.forward(); // Go forward in navigation history
     }
 
     function reload() {
         const iframe = document.getElementById('browser');
-        iframe.contentWindow.location.reload();
+        iframe.contentWindow.location.reload(); // Reload the current page
     }
-
-    document.getElementById('settings').onclick = function() {
-        const settingsMenu = document.getElementById('settingsMenu');
-        settingsMenu.style.display = settingsMenu.style.display === 'block' ? 'none' : 'block';
-    };
-
-    function toggleAdBlocker() {
-        const adBlockerToggle = document.getElementById('adBlockerToggle');
-        const message = adBlockerToggle.checked ? "Ad Blocker Enabled" : "Ad Blocker Disabled";
-        alert(message);
-
-        // Mock ad-blocking behavior
-        const iframe = document.getElementById('browser');
-        const currentUrl = new URL(iframe.src);
-        if (adBlockerToggle.checked && adBlockedSites.includes(currentUrl.hostname)) {
-            alert("This site is blocked."); // Mock ad-blocking message
-            iframe.src = "about:blank"; // Clear the iframe for a blocked site
-        }
-    }
-
-    function toggleTheme() {
-        const isDarkTheme = document.body.classList.toggle('dark-theme');
-        const controls = document.getElementById('controls');
-
-        // Toggle theme styles
-        if (isDarkTheme) {
-            document.body.style.backgroundColor = '#1e1e1e'; // Dark background
-            document.body.style.color = 'white'; // Light text
-            controls.style.backgroundColor = '#333'; // Dark control background
-            document.getElementById('urlInput').style.background = '#3a3a3a'; // Dark input background
-            document.getElementById('urlInput').style.color = 'white'; // Light input text
-            document.getElementById('urlInput').style.border = '1px solid #555'; // Dark input border
-            document.querySelectorAll('button').forEach(btn => {
-                btn.style.color = 'white'; // Light button text
-            });
-        } else {
-            document.body.style.backgroundColor = '#ffffff'; // Light background
-            document.body.style.color = 'black'; // Dark text
-            controls.style.backgroundColor = 'white'; // Light control background
-            document.getElementById('urlInput').style.background = '#f0f0f0'; // Light input background
-            document.getElementById('urlInput').style.color = 'black'; // Dark input text
-            document.getElementById('urlInput').style.border = '1px solid #ccc'; // Light input border
-            document.querySelectorAll('button').forEach(btn => {
-                btn.style.color = 'black'; // Dark button text
-            });
-        }
-
-        const iframe = document.getElementById('browser');
-        iframe.style.backgroundColor = isDarkTheme ? '#1e1e1e' : 'white'; // Set iframe background based on theme
-    }
-
-    // Close settings menu if clicking outside of it
-    window.onclick = function(event) {
-        if (!event.target.matches('#settings')) {
-            const settingsMenu = document.getElementById('settingsMenu');
-            if (settingsMenu.style.display === 'block') {
-                settingsMenu.style.display = 'none';
-            }
-        }
-    };
 </script>
 
 </body>
