--- a/browser.html
+++ b/browser.html
@@ -3,130 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Simple Opera GX-like Browser</title>
+    <title>HyperHx Browser</title>
     <style>
-        * {
-            box-sizing: border-box;
-        }
         body {
-            font-family: 'Arial', sans-serif;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
             margin: 0;
-            background-color: #0f0f0f;
-            color: #ffffff;
-            display: flex;
+            background-color: #f8f9fa;
+            font-family: Arial, sans-serif;
         }
-        #sidebar {
-            width: 250px;
-            background-color: #1f1f1f;
-            padding: 20px;
-            display: flex;
-            flex-direction: column;
-            box-shadow: 2px 0 5px rgba(0, 0, 0, 0.5);
-        }
-        #sidebar h2 {
-            text-align: center;
-            color: #ff5f5f;
-        }
-        #sidebar a {
-            color: #fff;
-            text-decoration: none;
-            padding: 10px;
-            margin: 5px 0;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        #sidebar a:hover {
-            background-color: #ff5f5f;
-        }
-        #main {
-            flex-grow: 1;
-            display: flex;
-            flex-direction: column;
-        }
-        #controls {
-            display: flex;
-            padding: 10px;
-            background-color: #272727;
-            box-shadow: 0 1px 5px rgba(0, 0, 0, 0.5);
-        }
-        button {
-            background: #ff5f5f;
-            border: none;
-            color: white;
-            padding: 10px;
-            margin-right: 5px;
-            cursor: pointer;
-            border-radius: 5px;
-            transition: background 0.3s;
-        }
-        button:hover {
-            background: #ff8080;
-        }
-        #urlInput {
-            flex-grow: 1;
-            padding: 10px;
-            background-color: #3c3c3c;
-            color: white;
-            border: none;
-            border-radius: 5px;
-            margin-left: 5px;
-        }
-        iframe {
-            width: 100%;
-            height: calc(100vh - 60px); /* Adjust height based on the controls */
-            border: none;
+        #google {
+            font-size: 48px;
+            color: #4285F4;
         }
     </style>
 </head>
 <body>
-
-<div id="sidebar">
-    <h2>My Browser</h2>
-    <a href="#">Home</a>
-    <a href="#">Bookmarks</a>
-    <a href="#">Settings</a>
-    <a href="#">Extensions</a>
-    <a href="#">Themes</a>
-</div>
-
-<div id="main">
-    <div id="controls">
-        <button onclick="goBack()">&#9664; Back</button>
-        <button onclick="goForward()">Forward &#9654;</button>
-        <button onclick="reload()">Reload</button>
-        <input type="text" id="urlInput" placeholder="Enter URL (e.g., https://example.com)" />
-        <button onclick="navigate()">Go</button>
-    </div>
-    <iframe id="browser" src="https://www.google.com"></iframe>
-</div>
-
-<script>
-    function navigate() {
-        const urlInput = document.getElementById('urlInput').value.trim();
-        let url = urlInput;
-
-        if (!url.startsWith('http://') && !url.startsWith('https://')) {
-            url = 'http://' + url;
+    <div id="google">HyperHx</div>
+    <script>
+        window.onload = function() {
+            window.location.href = "https://www.google.com";
         }
-
-        document.getElementById('browser').src = url; // Load the entered URL
-    }
-
-    function goBack() {
-        const iframe = document.getElementById('browser');
-        iframe.contentWindow.history.back(); // Go back in navigation history
-    }
-
-    function goForward() {
-        const iframe = document.getElementById('browser');
-        iframe.contentWindow.history.forward(); // Go forward in navigation history
-    }
-
-    function reload() {
-        const iframe = document.getElementById('browser');
-        iframe.contentWindow.location.reload(); // Reload the current page
-    }
-</script>
-
+    </script>
 </body>
 </html>
